update userService so auth will callback with login state, implemented login state check to account page, added new stylings to form and form item, fixed prettier config for correct tabwidths

--- a/src/stories/components/Form/styles.scss
+++ b/src/stories/components/Form/styles.scss
@@ -19,7 +19,7 @@
 
     @for $i from 1 through 3 {
       &:nth-child(#{$i}n) {
-        animation-delay: #{$i * .1}s;
+        animation-delay: #{$i * 0.1}s;
       }
     }
   }
@@ -29,4 +29,8 @@
     opacity: 1;
     transform: none;
   }
+}
+
+.form--account {
+  text-align: left;
 }
