--- a/src/stories/components/FileUpload/styles.scss
+++ b/src/stories/components/FileUpload/styles.scss
@@ -3,12 +3,12 @@
 // @file
 // FileUpload
 
-.file-upload-container {
+.file-upload {
   display: flex;
   flex-direction: column;
 }
 
-.file-upload {
+.file-upload__inner {
   p {
     display: inline-block;
     margin-right: $spacing-1;
@@ -20,13 +20,13 @@
     margin-bottom: 0;
     display: flex;
     justify-content: center;
-  }
-  img {
-    margin-left: calc(#{$spacing-1} / 3);
+    background-image: url('../../../images/file_upload-white-18dp.svg');
+    background-repeat:no-repeat;
+    background-position:right center;
   }
 }
 
-input[type="file"] {
+#file-upload__input {
   display: none;
 }
 
