--- a/src/stories/pages/AccountPage/styles.scss
+++ b/src/stories/pages/AccountPage/styles.scss
@@ -3,9 +3,11 @@
 // @file
 // Account Page
 
-.account-page {
+.account-info__section-header {
+  display: inline-flex;
+  vertical-align: middle;
 }
 
-.account__form-item {
-  border-top: 0;
+.account-info__header-text {
+  margin-right: rem(8px);
 }
