[SIE-85] update Image Upload files

--- a/src/stories/components/FileUpload/styles.scss
+++ b/src/stories/components/FileUpload/styles.scss
@@ -3,7 +3,9 @@
 // @file
 // File Upload
 
-// .file-upload {}
+.file-upload {
+  margin: $spacing-3 0;
+}
 
 .file-upload__inner {
   margin-top: $spacing-3;
