--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,3 +1,5 @@
+@import 'variables.scss';
+
 // @file
 // Base styles
 
@@ -17,6 +19,10 @@ body {
   padding: 0;
   transition: background-color 1s ease-in-out;
   word-wrap: break-word;
+}
+
+main {
+  padding: $spacing-6 0;
 }
 
 %hN {
