[SIE-90] fix Storybook Router issue

--- a/src/scss/_spacing.scss
+++ b/src/scss/_spacing.scss
@@ -10,3 +10,6 @@ $spacing-6: rem(60px);
 $spacing-7: rem(70px);
 $spacing-8: rem(80px);
 $spacing-9: rem(90px);
+$spacing-10: rem(100px);
+$spacing-11: rem(110px);
+$spacing-12: rem(120px);
