--- a/src/stories/layouts/Wizard/styles.scss
+++ b/src/stories/layouts/Wizard/styles.scss
@@ -7,9 +7,11 @@
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: $spacing-5;
+  margin: $spacing-10 0 $spacing-4;
 
   @include bp-tablet-lg {
     grid-template-columns: repeat(2, 1fr);
+    margin: $spacing-12 0 $spacing-6;
 
     > * {
       &:last-child {
