--- a/src/stories/components/HorizontalTitle/styles.scss
+++ b/src/stories/components/HorizontalTitle/styles.scss
@@ -1,44 +1,46 @@
 @import '../../../scss/variables.scss';
 
 // @file
-// HorizontalTitle
+// Horizontal Title
 
 .horizontal-title {
-
-    @include bp-tablet-lg {
-        grid-gap: $spacing-3;
-        display: flex;
-        flex-direction: row;
+  &--medium {
+    .horizontal-title__content {
+      font-size: $font-size-lg;
     }
+  }
 
-    @include bp-desktop {
-        gap: $spacing-5;
+  &--large {
+    .horizontal-title__content {
+      font-size: rem(24px);
     }
+  }
+}
 
-    &--medium {
-        .horizontal-title__content {
-            font-size: $font-size-lg;
-        }
-    }
-
-    &--large {
-        .horizontal-title__content {
-            font-size: rem(24px);
-        }
-    }
+.horizontal-title__container {
+  @include bp-tablet {
+    display: flex;
+  }
 }
 
 .horizontal-title__title {
-    padding-top: 0;
-    margin-top: 0;
-    padding-right: $spacing-1;
-    margin-right: $spacing-3;
+  max-width: rem(350px);
+
+  @include bp-tablet {
+    padding-right: $spacing-3;
+  }
+
+  @include bp-desktop {
+    padding-right: $spacing-5;
+  }
 }
 
 .horizontal-title__eyebrow {
-    font-size: rem(13px);
-    text-transform: uppercase;
-    letter-spacing: 1px;
+  color: $gray-5;
+  font-size: rem(13px);
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 
