--- a/src/stories/components/MainMenu/styles.scss
+++ b/src/stories/components/MainMenu/styles.scss
@@ -10,18 +10,19 @@
     cursor: pointer;
     font-weight:normal; 
     text-decoration: none;
-}
 
-.menu-item__icon {
-    margin-right: 15px;
-    padding: 10px 15px 10px 50px;
-    display: flex;
-}
+    &.active {
+        .menu-item__icon {
+            background: $teal;
+            fill: $white;
+            border-top-right-radius: 100px;
+            border-bottom-right-radius: 100px;
+        }
 
-.menu-item__text {
-    color: $black;
-    display: flex;
-    align-items: center;
+        .menu-item__text {
+            color: $teal-dark;
+        }
+    }
 }
 
 .menu-item__link:hover {
@@ -36,18 +37,16 @@
         color: $black;
     }
 }
+.menu-item__icon {
+    margin-right: 15px;
+    padding: 10px 15px 10px 50px;
+    display: flex;
+}
 
-.active {
-    .menu-item__icon {
-        background: $teal;
-        fill: $white;
-        border-top-right-radius: 100px;
-        border-bottom-right-radius: 100px;
-    }
-
-    .menu-item__text {
-        color: $teal-dark;
-    }
+.menu-item__text {
+    color: $black;
+    display: flex;
+    align-items: center;
 }
 
 li {
