--- a/src/stories/components/MainMenu/styles.scss
+++ b/src/stories/components/MainMenu/styles.scss
@@ -3,52 +3,59 @@
 // @file
 // Main Menu
 
-// .main-menu {}
-
-.menu-item__link {
-	display: flex;
-    cursor: pointer;
-    font-weight:normal; 
-    text-decoration: none;
-
-    &.active {
-        .menu-item__icon {
-            background: $teal;
-            fill: $white;
-            border-top-right-radius: 100px;
-            border-bottom-right-radius: 100px;
-        }
-
-        .menu-item__text {
-            color: $teal-dark;
-        }
-    }
+.main-menu {
+  @include list-clean;
 }
 
-.menu-item__link:hover {
+.main-menu__item {
+  margin: $spacing-2 0;
+}
+
+.menu-item__link {
+  align-items: center;
+  display: flex;
+  cursor: pointer;
+  font-weight:normal;
+  text-decoration: none;
+
+  &.active {
     .menu-item__icon {
-        background: $teal-dark;
-        fill: $white;
-        border-top-right-radius: 100px;
-        border-bottom-right-radius: 100px;
+      background: $teal;
+      fill: $white;
     }
 
     .menu-item__text {
-        color: $black;
+      color: $teal-dark;
     }
+  }
 }
+
+.menu-item__link {
+  font-family: $header-font-family;
+  font-weight: 700;
+
+  &:not(.active):hover {
+    .menu-item__icon {
+      background: $teal-dark;
+      fill: $white;
+    }
+
+    .menu-item__text {
+      color: $black;
+    }
+  }
+}
+
 .menu-item__icon {
-    margin-right: 15px;
-    padding: 10px 15px 10px 50px;
-    display: flex;
+  border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;
+  margin-right: $spacing-3;
+  padding: $spacing-1 15px $spacing-1 $spacing-5;
+  display: flex;
 }
 
 .menu-item__text {
-    color: $black;
-    display: flex;
-    align-items: center;
-}
-
-li {
-    list-style-type: none;
+  color: $black;
+  display: flex;
+  align-items: center;
 }
