Improve styling code format and complete stories file

--- a/src/stories/components/Slider/styles.scss
+++ b/src/stories/components/Slider/styles.scss
@@ -3,66 +3,33 @@
 // @file
 // Slider
 
-$text-font-family: $header-font-family;
-$text-font-size: $font-size-md;
-$text-weight: 600;
 $text-arrow-distance: 1.5rem;
 $text-text-distance: 1rem;
 
-.slider-button-back {
-    @include button-clear;
+.slider__button {
+  @include button-clear;
+  background-repeat: no-repeat;
+  font-family: $header-font-family;
+  font-size: $font-size-md;
+  font-weight: 600;
 
-    // Arrow icon
+  &.slider__button--back {
     @include svg-background('icon-arrow-left');
-    background-repeat: no-repeat;
     background-position: left center;
-    
-    // Text
-    font-family: $text-font-family;
-    font-size: $text-font-size;
-    font-weight: $text-weight;
     padding-left: $text-arrow-distance;
     margin-right: $text-text-distance;
+  }
+
+  &.slider__button--next {
+    @include svg-background('icon-arrow-right');
+    background-position: right center;
+    padding-right: $text-arrow-distance;
+    margin-left: $text-text-distance;
+    margin-right: 3rem;
+  }
 }
 
-.slider-button-next {
-  @include button-clear;
-
-  // Arrow icon
-  @include svg-background('icon-arrow-right');
-  background-repeat: no-repeat;
-  background-position: right center;
-  
-  // Text
-  font-family: $text-font-family;
-  font-size: $text-font-size;
-  font-weight: $text-weight;
-  padding-right: $text-arrow-distance;
-  margin-left: $text-text-distance;
-  margin-right: 3rem;
-}
-
-.slider-controls {
+.slider__controls {
   float: right;
   margin-top: 2rem;
 }
-
-/*
-
-  Questions:
-
-  1) Would it be better to split classes and nest them? For example:
-      .slider-button {
-          // Shared attributes here
-
-          .back {
-              // Back-specific attributes here
-          } 
-          .next {
-              // Next-specific attributes here
-          }
-      }
-
-  2) Fix naming based on BEM naming convention.
-
-*/
