[SIE-122] refactor AddExperiment

--- a/src/stories/components/FormItem/styles.scss
+++ b/src/stories/components/FormItem/styles.scss
@@ -131,7 +131,9 @@
 }
 
 .form-item__input--textarea {
+  font-family: $base-font-family;
   height: rem(300px);
+  line-height: $line-height-loose;
   padding-bottom: $spacing-2;
   padding-top: $spacing-2;
 
