[SIE-141] append vars to Qualtrics URL and make style adjustments

--- a/src/stories/components/Button/styles.scss
+++ b/src/stories/components/Button/styles.scss
@@ -40,6 +40,10 @@
   @include bp-tablet {
     font-size: $font-size-md;
   }
+
+  & + .button {
+    margin-left: $spacing-2;
+  }
 }
 
 .button--small {
