Draft 3: add completed steps tracking and disabled button styles

--- a/src/stories/layouts/Wizard/styles.scss
+++ b/src/stories/layouts/Wizard/styles.scss
@@ -72,4 +72,10 @@
       font-size: $font-size-md;
     }
   }
+
+  &.button--disabled {
+    opacity: 0.15;
+    pointer-events: none;
+    background-color: $gray-3;
+  }
 }
