Refactor disabled styling of button

--- a/src/stories/components/Button/styles.scss
+++ b/src/stories/components/Button/styles.scss
@@ -37,6 +37,12 @@
     color: $white;
   }
 
+  &:disabled {
+    opacity: 0.15;
+    pointer-events: none;
+    background-color: $gray-3 !important;
+  }
+
   @include bp-tablet {
     font-size: $font-size-md;
   }
