disabled the close on the modal

--- a/src/stories/components/Modal/styles.scss
+++ b/src/stories/components/Modal/styles.scss
@@ -50,6 +50,10 @@
   position: absolute;
   top: $spacing-9;
   width: 24px;
+
+  &:disabled {
+    cursor: not-allowed;
+  }
 }
 
 /* Custom button used in ExperimentsPage */
